<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <packaging>
        jar
    </packaging>

    <repositories>
        <repository>
            <id>maven.davidpineiro.release</id>
            <url>s3://davidpineiro-maven/release</url>
        </repository>
        <repository>
            <id>maven.davidpineiro.snapshot</id>
            <url>s3://davidpineiro-maven/snapshot</url>
        </repository>
    </repositories>

    <distributionManagement>
        <site>
            <id>maven.davidpineiro.site</id>
            <url>s3://davidpineiro-maven/site</url>
        </site>
        <repository>
            <id>maven.davidpineiro.release</id>
            <url>s3://davidpineiro-maven/release</url>
        </repository>
        <snapshotRepository>
            <id>maven.davidpineiro.snapshot</id>
            <url>s3://davidpineiro-maven/snapshot</url>
        </snapshotRepository>
    </distributionManagement>

    <parent>
        <groupId>xyz.davidpineiro</groupId>
        <artifactId>genes</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>core</artifactId>

    <dependencies>
        <dependency>
            <groupId>xyz.davidpineiro</groupId>
            <artifactId>VirtualMachine</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.github.seahen</groupId>
            <artifactId>maven-s3-wagon</artifactId>
            <version>1.3.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-statistics-distribution -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-statistics-distribution</artifactId>
            <version>1.0</version>
        </dependency>


    </dependencies>

    <build>
        <extensions>
            <extension>
                <groupId>com.github.seahen</groupId>
                <artifactId>maven-s3-wagon</artifactId>
                <version>1.3.3</version>
            </extension>
        </extensions>


        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>20</source>
                    <target>20</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>



    </build>

</project>